--- a/drupal/profiles/takepart/modules/petition/css/form.css
+++ b/drupal/profiles/takepart/modules/petition/css/form.css
@@ -26,7 +26,7 @@ form.petition-signature-form label {
 }
 
 form.petition-signature-form .form-item input {
-  border: 1px solid #EFF3F5;
+    border: 1px solid #CCC;
   font-family: Helvetica,Arial,sans-serif;
   font-size: 12px;
   font-weight: 400;
